<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/colorId"
        android:icon="@drawable/color_palette"
        android:title="@string/Color"
        app:showAsAction="always" />

    <item
        android:id="@+id/erase"
        android:icon="@drawable/erase"
        android:title="@string/erase"
        app:showAsAction="always" />
    <item
        android:id="@+id/lineWidth"
        android:icon="@drawable/pencil"
        android:title="@string/lineWidth"
        app:showAsAction="always" />

    <item
        android:id="@+id/saveId"
        android:icon="@drawable/save"
        android:title="@string/Save"
        app:showAsAction="always"/>

    <item
        android:id="@+id/clearId"
        android:title="@string/clear"
        android:icon="@drawable/delete"
        app:showAsAction="always"/>
</menu>