<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_margin="10dp"
        android:stretchColumns="1"
        android:layout_width="match_parent"
        android:layout_height="194dp">

        <TableRow
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/label_alpha"
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"
                android:gravity="right"/>

            <SeekBar
                android:id="@+id/alphaSeekBar"
                android:padding="14dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="255"/>
        </TableRow>

        <TableRow
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/label_red"
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"
                android:gravity="right"/>

            <SeekBar
                android:id="@+id/redSeekBar"
                android:padding="14dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="255"/>
        </TableRow>

        <TableRow
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/label_blue"
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"
                android:gravity="right"/>

            <SeekBar
                android:id="@+id/blueSeekBar"
                android:padding="14dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="255"/>
        </TableRow>

        <TableRow
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/label_green"
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"
                android:gravity="right"/>

            <SeekBar
                android:id="@+id/greenSeekBar"
                android:padding="14dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="255"/>
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:background="@android:color/white"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/colorView"
            android:layout_width="match_parent"
            android:layout_height="45dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/setColorButton"
        android:layout_gravity="center_horizontal"
        android:text="@string/setcolor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>